# vstu-scraper-rs

./: .env  .gitignore  Cargo.toml  LICENSE.md  README.md  plants.db  sqlx-data.json
src/: main.rs
src/lib/: database.rs  lib.rs
